[package]
name = "server"
version = "0.1.0"
authors = ["leriou <yange1876@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
rand = "0.7.3"
actix = "0.9.0"
regex = "1.3.9"
redis = "0.16.0"