[package]
name = "server"
version = "0.1.0"
authors = ["leriou <yange1876@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
actix-web = "2.0.0"
actix-rt = "1.0"
listenfd = "0.3"
redis = "0.17.0"